--- a/src/components/common/LoadingSkeleton.css
+++ b/src/components/common/LoadingSkeleton.css
@@ -9,6 +9,8 @@
   width: 40px;
   height: 40px;
   border: 4px solid #f3f3f3;
+  border-top: 4px solid #667eea;
+  border-bottom: 4px solid #667eea;
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
